--- a/index.html
+++ b/index.html
@@ -1508,7 +1508,7 @@
     </nav>
     <nav>
         <ul>
-            <li><a href="#home-section">Home</a></li>
+            <li><a href="#">Home</a></li>
             <li><a href="#profile-section">Profile</a></li>
             <li><a href="#services-section">Services</a></li>
             <li><a href="#projects-section">Project</a></li>
