--- a/assignments/css/Frameworks/ POS system Using Bootstrap/Customers.html
+++ b/assignments/css/Frameworks/ POS system Using Bootstrap/Customers.html
@@ -19,91 +19,82 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
+          <a class="nav-link" href="index.html">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Customers</a>
+          <a class="nav-link bg-primary bg-opacity-25 rounded active" href="Customers.html">Customers</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Order</a>
+          <a class="nav-link" href="Order.html">Order</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Items</a>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Others
-          </a>
-          <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
-          </ul>
+          <a class="nav-link" href="Items.html">Items</a>
         </li>
       </ul>
     </div>
   </div>
 </nav>
 <!--Navbar End-->
-
 <br>
 
-<section class="row ms-2 me-2 ">
+<main class="container-fluid" >
+  <section class="row ms-2 me-2">
 
-  <div class="col-10">
-    <p>Customer</p>
-  </div>
-  <div class="col-2">
-    <button class="btn btn-outline-success " type="submit">Add Customer</button>
-  </div>
-  <br><br>
-  <hr>
-  <div class="col-12">
-    <form class="d-flex" role="search">
-      <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-success" type="submit">Search</button>
-    </form>
-  </div>
-  <br><br><br>
+    <div class="col-10">
+      <p>Customer</p>
+    </div>
+    <div class="col-2">
+      <button class="btn btn-outline-success " type="submit">Add Customer</button>
+    </div>
+    <br><br>
+    <hr>
+    <div class="col-12">
+      <form class="d-flex" role="search">
+        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-success" type="submit">Search</button>
+      </form>
+    </div>
+    <br><br><br>
 
-  <table class="table table-bordered table-hover col-12">
-    <thead>
-    <tr>
-      <th scope="col">Customer ID</th>
-      <th scope="col">Name</th>
-      <th scope="col">Address</th>
-      <th scope="col">Tel</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr>
-      <th scope="row">1</th>
-      <td>Mark</td>
-      <td>Otto</td>
-      <td>@mdo</td>
-    </tr>
-    <tr>
-      <th scope="row">2</th>
-      <td>Jacob</td>
-      <td>Thornton</td>
-      <td>@fat</td>
-    </tr>
-    <tr>
-      <th scope="row">3</th>
-      <td colspan="2">Larry the Bird</td>
-      <td>@twitter</td>
-    </tr>
-    </tbody>
-  </table>
+    <table class="table table-bordered table-hover col-12">
+      <thead>
+      <tr>
+        <th scope="col">Customer ID</th>
+        <th scope="col">Name</th>
+        <th scope="col">Address</th>
+        <th scope="col">Tel</th>
+      </tr>
+      </thead>
+      <tbody>
+      <tr>
+        <th scope="row">1</th>
+        <td>Mark</td>
+        <td>Otto</td>
+        <td>@mdo</td>
+      </tr>
+      <tr>
+        <th scope="row">2</th>
+        <td>Jacob</td>
+        <td>Thornton</td>
+        <td>@fat</td>
+      </tr>
+      <tr>
+        <th scope="row">3</th>
+        <td colspan="2">Larry the Bird</td>
+        <td>@twitter</td>
+      </tr>
+      </tbody>
+    </table>
 
-  <div class="modal-footer col-12">
-    <button class="btn btn-danger me-1" data-bs-dismiss="modal" type="button">Delete Customer</button>
+    <div class="modal-footer col-12">
+      <button class="btn btn-danger me-1" data-bs-dismiss="modal" type="button">Delete Customer</button>
 
-    <button class="btn btn-success me-1" type="button">Update Customer</button>
+      <button class="btn btn-success me-1" type="button">Update Customer</button>
 
-    <button class="btn btn-warning me-1" type="button">Get All Customer Details</button>
-  </div>
-</section>
+      <button class="btn btn-warning me-1" type="button">Get All Customer Details</button>
+    </div>
+  </section>
+</main>
 
 <script src="assets/js/bootstrap.min.js"></script>
 </body>
