--- a/assignments/css/Frameworks/ POS system Using Bootstrap/index.html
+++ b/assignments/css/Frameworks/ POS system Using Bootstrap/index.html
@@ -19,23 +19,16 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
+          <a class="nav-link bg-primary bg-opacity-25 rounded active" aria-current="page" href="index.html">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Order</a>
+          <a class="nav-link" href="Customers.html">Customers</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Items</a>
+          <a class="nav-link" href="Order.html">Order</a>
         </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Others
-          </a>
-          <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
-          </ul>
+        <li class="nav-item">
+          <a class="nav-link" href="Items.html">Items</a>
         </li>
       </ul>
     </div>
