--- a/assignments/css/Frameworks/ POS system Using Bootstrap/Order.html
+++ b/assignments/css/Frameworks/ POS system Using Bootstrap/Order.html
@@ -121,17 +121,21 @@
         </div>
       </div>
     </div>
-    <div class="row card col-3 me-2 mt-2 shadow-sm">
+    <div class="row card col-5 me-2 mt-2 shadow-sm">
+      <br>
       <p>Total</p>
       <p>SubTotal</p>
-      <div class="col-6">
-        <label for="formGroupExampleInput" class="form-label">Example label</label>
-        <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Example input placeholder">
+      <div class="row col-12">
+        <div class="col-6">
+          <label for="formGroupExampleInput" class="form-label">Example label</label>
+          <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Example input placeholder">
+        </div>
+        <div class="col-6">
+          <label for="formGroupExampleInput" class="form-label">Example label</label>
+          <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Example input placeholder">
+        </div>
       </div>
-      <div class="col-6">
-        <label for="formGroupExampleInput" class="form-label">Example label</label>
-        <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Example input placeholder">
-      </div>
+
       <div class="col-12">
         <label for="formGroupExampleInput" class="form-label">Example label</label>
         <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Example input placeholder">
@@ -139,7 +143,7 @@
       <button class="btn btn-danger align-items-center col-6" type="button">Add Item</button>
       <br>
     </div>
-    <div class="col-9  mt-2">
+    <div class="col-7  mt-2">
       <table class="table table-bordered table-hover">
         <thead>
         <tr>
